--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,22 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-  <head>
-    <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
-  </head>
-  <body>
-    <script>
-      window.CMS_MANUAL_INIT = true;
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Content Manager</title>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+</head>
+<body>
+  <!-- Include the script that builds the page and powers Decap CMS -->
+  <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
+  <script>
+    window.CMS_MANUAL_INIT = true;
+    const config = {
+      backend: {
+        name: 'github',
+        repo: 'josephabateman/The-JB-Experience',
+        branch: 'main',
+        auth_scope: 'repo',
+      },
+      media_folder: 'public/uploads',
+      public_folder: '/uploads',
+      collections: [
+        {
+          name: 'pages',
+          label: 'Pages',
+          files: [
+            {
+              file: 'content/home.md',
+              label: 'Home Page',
+              name: 'home',
+              fields: [
+                { label: 'Title', name: 'title', widget: 'string' },
+                { label: 'Body', name: 'body', widget: 'markdown' },
+              ],
+            },
+          ],
+        },
+      ],
+    };
 
-      fetch("/admin/config.yml")
-        .then(response => {
-          if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
-          return response.text();
-        })
-        .then(yamlText => {
-          window.CMS.init({ config: yamlText });
-        })
-        .catch(error => console.error("Failed to load Decap CMS:", error));
-    </script>
-    <div id="nc-root"></div>
-  </body>
+    window.CMS.init({ config });
+  </script>
+</body>
 </html>
